--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -1,11 +1,3 @@
-@extends('layout')
-@section('title', 'Log In')
-
-
-@section('header')
-@include('partials.header')
-@endsection
-@section('content')
 <main ng-controller="ProfileController">
     <div class="container mt-5">
         <div class="card">
@@ -17,7 +9,10 @@
                 <p><strong>First Name : </strong>[[ user.firstName ]]</p>
                 <p><strong>Last Name : </strong>[[ user.lastName ]]</p>
                 <p><strong>Gender : </strong></p>
-                <p><strong>Registered At : </strong> [[ user.created_at | date ]]</p>
+                <p>
+                    <strong>Registered At : </strong> [[ user.created_at | date
+                    ]]
+                </p>
             </div>
         </div>
 
@@ -32,8 +27,5 @@
             </form>
         </div>
     </div>
-</main> 
-    @section('footer')
-    @include('partials.footer')
-    @endsection
-@endsection
+</main>
+@section('footer') @include('partials.footer') @endsection @endsection
