--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -5,36 +5,102 @@
                 <h2>Profile</h2>
             </div>
             <div class="card-body">
-                <p><strong>Email : </strong> [[ user.email ]]</p>
-                <p><strong>First Name : </strong>[[ user.firstName ]]</p>
-                <p><strong>Last Name : </strong>[[ user.lastName ]]</p>
-                <p><strong>Gender : </strong></p>
-                <p>
-                    <strong>Registered At : </strong> [[ user.created_at | date
-                    ]]
-                </p>
+                <form ng-submit="updateProfile()">
+                    <div class="mb-3">
+                        <label for="email" class="form-label"
+                            ><strong>Email:</strong></label
+                        >
+                        <input
+                            type="email"
+                            class="form-control-plaintext"
+                            id="email"
+                            readonly
+                            placeholder="{{user.email }}"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="firstName" class="form-label"
+                            ><strong>First Name:</strong></label
+                        >
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="firstName"
+                            ng-readonly="!isEditing"
+                            placeholder="{{user.firstName}}"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label"
+                            ><strong>Last Name:</strong></label
+                        >
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="lastName"
+                            ng-readonly="!isEditing"
+                            placeholder="{{user.lastName}}"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="gender" class="form-label"
+                            ><strong>Gender:</strong></label
+                        >
+                        <select
+                            id="gender"
+                            class="form-control"
+                            ng-model="user.gender"
+                            ng-disabled="!isEditing"
+                        >
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="registeredAt" class="form-label"
+                            ><strong>Registered At:</strong></label
+                        >
+                        <input
+                            type="text"
+                            class="form-control-plaintext"
+                            id="registeredAt"
+                            value="{{ user.created_at | date:'medium' }}"
+                            readonly
+                        />
+                    </div>
+
+                    <div class="d-flex justify-content-between mt-3">
+                        <button
+                            type="button"
+                            class="btn btn-primary"
+                            ng-click="enableEditing()"
+                            ng-show="!isEditing"
+                        >
+                            Edit
+                        </button>
+                        <button
+                            type="submit"
+                            class="btn btn-success"
+                            ng-show="isEditing"
+                        >
+                            Save
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
 
         <div class="d-flex justify-content-between mt-4">
-            <!-- Delete Account Button -->
-            <form
-                action="{{ route('profile.delete') }}"
-                method="POST"
-                onsubmit="return confirm('Are you sure you want to delete your account? This action cannot be undone.')"
+            <button
+                type="button"
+                class="btn btn-danger"
+                ng-click="deleteAccount()"
             >
-                @csrf @method('DELETE')
-                <button type="submit" class="btn btn-danger">
-                    Delete Account
-                </button>
-            </form>
-
-            <!-- Logout Button -->
-            <form method="POST" action="{{ route('logout') }}">
-                @csrf
-                <button type="submit" class="btn btn-danger">Logout</button>
-            </form>
+                Delete Account
+            </button>
+            <button type="button" class="btn btn-danger" ng-click="logout()">
+                Logout
+            </button>
         </div>
     </div>
 </main>
-@section('footer') @include('partials.footer') @endsection @endsection
