More converting into angularJS

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -36,7 +36,7 @@
             id="mainSearchGlassLogo"
             ng-click="toggleSearch()"
         ></i>
-        <a href="login"><i class="fa-solid fa-user"></i></a>
+        <a href="/#!/profile"><i class="fa-solid fa-user"></i></a>
     </ul>
 
     <div id="sidebarMenu" ng-show="sidebarVisible">
