--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,9 +1,11 @@
-<main class="d-flex justify-content-center align-items-center vh-100">
+<main
+    class="d-flex justify-content-center align-items-center vh-100"
+    ng-controller="LoginController"
+>
     <div class="card shadow p-4" style="width: 30rem">
         <h1 class="text-center">Login</h1>
         <p class="text-center">Enter your email and password to login!</p>
-        <form action="{{ route('loginAccount') }}" method="post" class="mt-3">
-            @csrf
+        <form ng-submit="loginAccount()" class="mt-3">
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input
@@ -12,7 +14,7 @@
                     name="email"
                     class="form-control"
                     placeholder="E-mail"
-                    value="{{old('email')}}"
+                    ng-model="loginData.email"
                     required
                 />
             </div>
@@ -24,18 +26,19 @@
                     name="password"
                     class="form-control"
                     placeholder="Password"
+                    ng-model="loginData.password"
                     required
                 />
             </div>
-            @if ($errors->any()) @foreach ($errors->all() as $error)
-            <small class="text-danger">{{ $error }}</small>
-            @endforeach @endif
+            <small class="text-danger" ng-if="errorMessage"
+                >{{ errorMessage }}</small
+            >
             <button type="submit" class="btn btn-dark w-100">Login</button>
         </form>
         <p class="mt-4 text-center">
             Don't have an account?
             <a
-                href="{{ route('createAccountView') }}"
+                href="#!/signup"
                 class="text-decoration-underline sign-in-direction"
                 >Sign Up</a
             >
