--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -19,6 +19,20 @@
             </div>
         </div>
     </div>
+
+    <div class="comments">
+        <h3>Comments</h3>
+        <div ng-repeat="comment in comments">
+            <p><strong>{{ comment.user }}:</strong> {{ comment.content }}</p>
+        </div>
+    </div>
+    
+    <div class="add-comment">
+        <input type="text" ng-model="newComment.user" placeholder="Your name" />
+        <textarea ng-model="newComment.content" placeholder="Add a comment"></textarea>
+        <button ng-click="addComment()">Submit Comment</button>
+    </div>
+
     <div ng-if="error">
         <p class="text-center text-danger">{{error }}</p>
     </div>
