product details design

--- a/public/html/homepage.html
+++ b/public/html/homepage.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div id="productTab"><span class="tab active"> Best Products</span></div>
+    <div id="productTab"><span class="tab active">Products</span></div>
     <div id="productsContainerDiv">
         <div id="productsContainer" class="products">
             <a
