--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -1,4 +1,4 @@
-<div class="container my-5" ng-controller="ProductDetailsController">
+<!-- <div class="container my-5" ng-controller="ProductDetailsController">
     <div ng-if="!error">
         <h1 class="text-center">{{product.productName }}</h1>
         <div class="row">
@@ -21,5 +21,51 @@
     </div>
     <div ng-if="error">
         <p class="text-center text-danger">{{error }}</p>
+    </div>
+</div> -->
+
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="product-image-gallery" style="margin-bottom: 0;"> <!-- Remove margin below the gallery -->
+                <img 
+                    ng-src="images/produk/{{product.images.colors.default[0]}}" 
+                    class="img-fluid main-image" 
+                    alt="{{product.productName}}"
+                    style="max-height: 300px; object-fit: cover; margin-bottom: 0;"  
+                />
+                <div class="thumbnail-gallery d-flex justify-content-start">
+                    <div 
+                        ng-repeat="image in product.images.colors.default" 
+                        class="thumbnail mr-2"
+                    >
+                        <img 
+                            ng-src="images/produk/{{image}}" 
+                            class="img-thumbnail" 
+                            alt="Thumbnail"
+                        />
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-6">
+            <h1 class="display-6 mb-3" style="margin-top: 0;">{{product.productName}}</h1> <!-- Remove margin above the title -->
+            <div class="product-meta mb-3">
+                <span class="badge bg-secondary me-2">{{product.category}}</span>
+            </div>
+            <div class="price-section mb-4">
+                <h3 class="text-dark">
+                    Price Range: 
+                    <span>IDR {{product.lowestPrice | number}} - IDR {{product.highestPrice | number}}</span>
+                </h3>
+            </div>
+            <div class="purchase-options d-flex">
+                <button class="btn btn-dark btn-sm me-2">Find this Item</button>
+                <button class="btn btn-outline-danger btn-sm">
+                    <i class="fas fa-heart"></i> <!-- Font Awesome heart icon -->
+                </button>
+            </div>
+        </div>
     </div>
 </div>
