--- a/public/html/header.html
+++ b/public/html/header.html
@@ -1,69 +1,46 @@
-<header>
-    <div id="menuToggleDiv">
-        <i
-            class="fa-solid fa-bars"
-            id="menuToggle"
-            ng-click="toggleSidebar()"
-        ></i>
-    </div>
-    <div id="rightHeader">
-        <div id="iconHeader">
-            <a href="/">
-                <img id="chaldeaLogo" src="images/gg.png" alt="Logo" />
-                <h2>GatGate</h2>
-            </a>
+<div class="main-header-container">
+    <header>
+        <div id="menuToggleDiv">
+            <i
+                class="fa-solid fa-bars"
+                id="menuToggle"
+                ng-click="toggleSidebar()"
+            ></i>
         </div>
-    </div>
-    <ul id="selectionHeader">
-        <li class="selectionItem">
-            Collections
-            <div class="overlayMenu">
-                <ul>
-                    <a href="../../html/category/audio.html">
-                        <li>Audio</li>
-                    </a>
-                    <a href="../../html/category/watch.html">
-                        <li>Watch</li>
-                    </a>
-                    <a href="../../html/category/bags.html">
-                        <li>Bags</li>
-                    </a>
-                </ul>
+        <div id="rightHeader">
+            <div id="iconHeader">
+                <a href="/">
+                    <img id="chaldeaLogo" src="images/gg.png" alt="Logo" />
+                    <h2>GatGate</h2>
+                </a>
             </div>
-        </li>
-        <i
-            class="fa-solid fa-magnifying-glass"
-            id="mainSearchGlassLogo"
-            ng-click="toggleSearch()"
-        ></i>
-        <a href="/#!/profile"><i class="fa-solid fa-user"></i></a>
-    </ul>
-
-    <div id="sidebarMenu" ng-show="sidebarVisible">
-        <div id="closeSidebar" ng-click="closeSidebar()">&times;</div>
-        <ul>
-            <li class="menuItem" ng-click="toggleDropdown($event)">
-                <div class="caretText">
-                    Collections
-                    <i class="fa-solid fa-caret-down caretIcon"></i>
-                    <i class="fa-solid fa-caret-up caretIcon"></i>
-                </div>
-                <div class="dropDownContent">
+        </div>
+        <ul id="selectionHeader">
+            <li class="selectionItem">
+                Collections
+                <div class="overlayMenu">
                     <ul>
-                        <a href="../../html/category/audio.html">
-                            <li>Audio</li>
-                        </a>
-                        <a href="../../html/category/watch.html">
-                            <li>Watch</li>
-                        </a>
-                        <a href="../../html/category/bags.html">
-                            <li>Bags</li>
-                        </a>
+                        <a href="../../html/category/audio.html"
+                            ><li>Audio</li></a
+                        >
+                        <a href="../../html/category/watch.html"
+                            ><li>Watch</li></a
+                        >
+                        <a href="../../html/category/bags.html"
+                            ><li>Bags</li></a
+                        >
                     </ul>
                 </div>
             </li>
+            <i
+                class="fa-solid fa-magnifying-glass"
+                id="mainSearchGlassLogo"
+                ng-click="toggleSearch()"
+            ></i>
+            <a href="/#!/profile"><i class="fa-solid fa-user"></i></a>
         </ul>
-    </div>
+    </header>
+
     <div id="searchHeader" ng-show="searchVisible">
         <div id="searchDiv">
             <i class="fa-solid fa-magnifying-glass" id="searchGlassLogo"></i>
@@ -78,14 +55,13 @@
         </div>
         <div id="productContainerSearch" ng-show="foundProducts.length > 0">
             <div class="productSearch" ng-repeat="product in foundProducts">
-                <a ng-href="[[product.page]]">
-                    <img ng-src="[[product.img]]" alt="[[product.name]]" />
+                <a ng-href="#!/product/{{product.productName}}">
                     <div class="productInfoSearch">
-                        <h3>[[product.name]]</h3>
+                        <h3>{{ product.productName }}</h3>
                     </div>
                 </a>
             </div>
         </div>
         <div id="noResult" ng-show="noResults()">No Result</div>
     </div>
-</header>
+</div>
