--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-6">
                 <img
-                    ng-src="images/produk/{{product.images.colors.default[0]}}  "
+                    ng-src="images/produk/{{product.images.default[0]}}  "
                     class="img-fluid"
                     alt=" {{product.productName }}"
                 />
