--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -28,7 +28,7 @@
                 <button
                     ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment.id !== comment.id)"
                     ng-click="startEditing(comment)" class="btn btn-success">Edit</button>
-                <button ng-if="isLoggedIn && user.email === comment.user_email" ng-click="deleteComment(comment.id)"
+                <button ng-if="isLoggedIn && user.email === comment.user_email" ng-click="deleteComment(comment._id)"
                     class="btn btn-danger float-right ml-2">
                     Delete
                 </button>
