--- a/public/html/homepage.html
+++ b/public/html/homepage.html
@@ -36,8 +36,7 @@
                         {{'IDR ' + product.lowestPrice.toLocaleString() + ' -
                         IDR ' + product.highestPrice.toLocaleString() }}
                     </p>
-                </div></a
-            >
+                </div></a>
         </div>
     </div>
 </div>
