--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -36,9 +36,9 @@
             </div>
             <div class="purchase-options d-flex">
                 <button class="btn btn-dark btn-sm me-2">Find this Item</button>
-                <button class="btn btn-outline-danger btn-sm">
-                    <i class="fas fa-heart"></i> <!-- Font Awesome heart icon -->
-                </button>
+                <button class="btn btn-outline-danger btn-sm" ng-click="addToWishlist(product)">
+                    <i class="fas fa-heart"></i> 
+                </button>    
             </div>
         </div>
     </div>
