--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div id="footerContainer">
-        <footer id="footer">
+        <div id="footer">
             <div class="footerSection about">
                 <h3>GatGate</h3>
                 <div class="logos">
@@ -39,7 +39,7 @@
                     <button type="submit">SUBSCRIBE</button>
                 </form>
             </div>
-        </footer>
+        </div>
         <div id="footerBottom">
             <p>&copy; 2024 - GatGate</p>
         </div>
