--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -1,80 +1,124 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <div class="product-image-gallery" style="margin-bottom: 0;"> <!-- Remove margin below the gallery -->
-                <img 
-                    ng-src="images/produk/{{product.images.default[0]}}" 
-                    class="img-fluid main-image" 
+            <div class="product-image-gallery" style="margin-bottom: 0">
+                <img
+                    ng-src="images/produk/{{product.images.default[0]}}"
+                    class="img-fluid main-image"
                     alt="{{product.productName}}"
-                    style="max-height: 300px; object-fit: cover; margin-bottom: 0;"  
+                    style="
+                        max-height: 300px;
+                        object-fit: cover;
+                        margin-bottom: 0;
+                    "
                 />
                 <div class="thumbnail-gallery d-flex justify-content-start">
-                    <div 
-                        ng-repeat="image in product.images.colors.default" 
+                    <div
+                        ng-repeat="image in product.images.default"
                         class="thumbnail mr-2"
                     >
-                        <img 
-                            ng-src="images/produk/{{image}}" 
-                            class="img-thumbnail" 
+                        <img
+                            ng-src="images/produk/{{image}}"
+                            class="img-thumbnail"
                             alt="Thumbnail"
                         />
                     </div>
                 </div>
             </div>
         </div>
-        
+
         <div class="col-md-6">
-            <h1 class="display-6 mb-3" style="margin-top: 0;">{{product.productName}}</h1> <!-- Remove margin above the title -->
+            <h1 class="display-6 mb-3" style="margin-top: 0">
+                {{product.productName}}
+            </h1>
             <div class="product-meta mb-3">
-                <span class="badge bg-secondary me-2">{{product.category}}</span>
-
+                <span class="badge bg-secondary me-2"
+                    >{{product.category}}</span
+                >
             </div>
-            <div class="col-md-6">
-                <p><strong>Category:</strong> {{product.category }}</p>
-                <p><strong>Price Range:</strong> IDR {{product.lowestPrice | number }} - IDR {{product.highestPrice |
-                    number }}</p>
-                <button class="btn btn-primary">Buy Now</button>
+            <div class="price-section mb-4">
+                <h3 class="text-dark">
+                    Price Range:
+                    <span
+                        >IDR {{product.lowestPrice | number}} - IDR
+                        {{product.highestPrice | number}}</span
+                    >
+                </h3>
+            </div>
+            <div class="purchase-options d-flex">
+                <button class="btn btn-dark btn-sm me-2">Find this Item</button>
+                <button class="btn btn-outline-danger btn-sm">
+                    <i class="fas fa-heart"></i>
+                </button>
             </div>
         </div>
-    </div>
 
-    <div ng-if="comments.length > 0" class="mt-4">
-        <h3>Comments</h3>
-        <div class="list-group">
-            <div ng-repeat="comment in comments" class="list-group-item">
-                <p><strong>{{ comment.user_name }}:</strong> {{ comment.content }}</p>
-                <div ng-if="editingComment && editingComment.id === comment.id">
-                    <textarea ng-model="editingComment.content" class="form-control" rows="3"></textarea>
-                    <button ng-click="updateComment()" class="btn btn-primary mt-2">Save</button>
-                    <button ng-click="cancelEditing()" class="btn btn-secondary mt-2">Cancel</button>
+        <div ng-if="comments.length > 0" class="mt-4">
+            <h3>Comments</h3>
+            <div class="list-group">
+                <div ng-repeat="comment in comments" class="list-group-item">
+                    <p>
+                        <strong>{{ comment.user_name }}:</strong> {{
+                        comment.content }}
+                    </p>
+                    <div
+                        ng-if="editingComment && editingComment.id === comment.id"
+                    >
+                        <textarea
+                            ng-model="editingComment.content"
+                            class="form-control"
+                            rows="3"
+                        ></textarea>
+                        <button
+                            ng-click="updateComment()"
+                            class="btn btn-primary mt-2"
+                        >
+                            Save
+                        </button>
+                        <button
+                            ng-click="cancelEditing()"
+                            class="btn btn-secondary mt-2"
+                        >
+                            Cancel
+                        </button>
+                    </div>
+                    <button
+                        ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment.id !== comment.id)"
+                        ng-click="startEditing(comment)"
+                        class="btn btn-success"
+                    >
+                        Edit
+                    </button>
                 </div>
-                <button
-                    ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment.id !== comment.id)"
-                    ng-click="startEditing(comment)" class="btn btn-success">Edit</button>
             </div>
         </div>
-    </div>
 
-    <div ng-if="comments.length === 0" class="mt-4 text-center">
-        <p>No comments yet. Be the first to comment!</p>
-    </div>
-
-    <div ng-if="isLoggedIn" class="mt-4">
-        <h4>Add a Comment</h4>
-        <div class="form-group">
+        <div ng-if="comments.length === 0" class="mt-4 text-center">
+            <p>No comments yet. Be the first to comment!</p>
         </div>
-        <div class="form-group">
-            <textarea ng-model="newComment.content" class="form-control" rows="3"
-                placeholder="Add a comment"></textarea>
+
+        <div ng-if="isLoggedIn" class="mt-4">
+            <h4>Add a Comment</h4>
+            <div class="form-group"></div>
+            <div class="form-group">
+                <textarea
+                    ng-model="newComment.content"
+                    class="form-control"
+                    rows="3"
+                    placeholder="Add a comment"
+                ></textarea>
+            </div>
+            <button ng-click="addComment()" class="btn btn-success">
+                Submit Comment
+            </button>
         </div>
-        <button ng-click="addComment()" class="btn btn-success">Submit Comment</button>
-    </div>
 
-    <div ng-if="!isLoggedIn" class="mt-4 text-center text-danger">
-        <p>You must be logged in to comment.</p>
-    </div>
+        <div ng-if="!isLoggedIn" class="mt-4 text-center text-danger">
+            <p>You must be logged in to comment.</p>
+        </div>
 
-    <div ng-if="error" class="mt-4">
-        <p class="text-center text-danger">{{error }}</p>
+        <div ng-if="error" class="mt-4">
+            <p class="text-center text-danger">{{error }}</p>
+        </div>
     </div>
 </div>
