--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -47,9 +47,11 @@
             </div>
             <div class="purchase-options d-flex">
                 <button class="btn btn-dark btn-sm me-2">Find this Item</button>
-                <button class="btn btn-outline-danger btn-sm">
+                <button
+                    class="btn btn-outline-danger btn-sm"
+                    ng-click="addToWishlist(product)"
+                >
                     <i class="fas fa-heart"></i>
-                    <!-- Font Awesome heart icon -->
                 </button>
             </div>
         </div>
