carousel image product and href link

--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -1,148 +1,72 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <div class="product-image-gallery" style="margin-bottom: 0">
-                <img
-                    ng-src="images/produk/{{product.images.default[0]}}"
-                    class="img-fluid main-image"
-                    alt="{{product.productName}}"
-                    style="
-                        max-height: 300px;
-                        object-fit: cover;
-                        margin-bottom: 0;
-                    "
-                />
-                <div class="thumbnail-gallery d-flex justify-content-start">
-                    <div
-                        ng-repeat="image in product.images.default"
-                        class="thumbnail mr-2"
-                    >
-                        <img
-                            ng-src="images/produk/{{image}}"
-                            class="img-thumbnail"
-                            alt="Thumbnail"
-                        />
+            <div id="productImageCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+                <!-- Carousel Indicators -->
+                <div class="carousel-indicators">
+                    <button type="button" ng-repeat="(index, image) in product.images.default"
+                        data-bs-target="#productImageCarousel" data-bs-slide-to="{{index}}"
+                        ng-class="{ active: $first }" aria-current="{{$first ? 'true' : 'false'}}"
+                        aria-label="Slide {{index + 1}}"></button>
+                </div>
+
+                <!-- Carousel Images -->
+                <div class="carousel-inner">
+                    <div class="carousel-item" ng-class="{ active: $first }"
+                        ng-repeat="image in product.images.default">
+                        <img ng-src="images/produk/{{image}}" class="d-block w-100" alt="{{product.productName}}" style="
+                                width: 100%;
+                                height: 300px; /* Match the carousel height */
+                                object-fit: contain; /* Ensure the image fits */
+                                background-color: #f8f9fa; /* Optional padding color */
+                            " />
                     </div>
                 </div>
-                <button
-                    ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment.id !== comment.id)"
-                    ng-click="startEditing(comment._id)"
-                    class="btn btn-success"
-                >
-                    Edit
+
+                <!-- Carousel Controls -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#productImageCarousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" style="filter: invert(1);" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button
-                    ng-if="isLoggedIn && user.email === comment.user_email"
-                    ng-click="deleteComment(comment._id)"
-                    class="btn btn-danger float-right ml-2"
-                >
-                    Delete
+                <button class="carousel-control-next" type="button" data-bs-target="#productImageCarousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" style="filter: invert(1);" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+
+            <!-- Thumbnails -->
+            <div class="thumbnail-gallery mt-3">
+                <div class="row" ng-repeat="chunk in product.images.default | limitToRows: 7">
+                    <div class="col-auto" ng-repeat="image in chunk">
+                        <img ng-src="images/produk/{{image}}" class="img-thumbnail" alt="Thumbnail" style="
+                            cursor: pointer;
+                            width: 80px;
+                            height: 80px;
+                            object-fit: contain;
+                            background-color: #f8f9fa;" ng-click="goToSlide($parent.$index * 7 + $index)" />
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="col-md-6">
-            <h1 class="display-6 mb-3" style="margin-top: 0">
-                {{product.productName}}
-            </h1>
+            <h1 class="display-6 mb-3">{{product.productName}}</h1>
             <div class="product-meta mb-3">
-                <span class="badge bg-secondary me-2"
-                    >{{product.category}}</span
-                >
+                <span class="badge bg-secondary me-2">{{product.category}}</span>
             </div>
-            <div class="price-section mb-4">
-                <h3 class="text-dark">
-                    Price Range:
-                    <span
-                        >IDR {{product.lowestPrice | number}} - IDR
-                        {{product.highestPrice | number}}</span
-                    >
-                </h3>
-            </div>
+            <h3 class="text-dark">
+                Price Range:
+                <span>IDR {{product.lowestPrice | number}} - IDR {{product.highestPrice | number}}</span>
+            </h3>
             <div class="purchase-options d-flex">
-                <button class="btn btn-dark btn-sm me-2">Find this Item</button>
-                <button
-                    class="btn btn-outline-danger btn-sm"
-                    ng-click="addToWishlist(product)"
-                >
+                <a class="btn btn-dark btn-sm me-2" ng-href="{{product.tokopediaLink}}" target="_blank">Tokopedia</a>
+                <a class="btn btn-dark btn-sm me-2" ng-href="{{product.shopeeLink}}" target="_blank">Shopee</a>
+                <button class="btn btn-outline-danger btn-sm" ng-click="addToWishlist(product)">
                     <i class="fas fa-heart"></i>
                 </button>
             </div>
-        </div>
-
-        <div ng-if="comments.length > 0" class="mt-4">
-            <h3>Comments</h3>
-            <div class="list-group">
-                <div ng-repeat="comment in comments" class="list-group-item">
-                    <p>
-                        <strong>{{ comment.user_name }}:</strong> {{
-                        comment.content }}
-                    </p>
-                    <div
-                        ng-if="editingComment && editingComment._id === comment._id"
-                    >
-                        <textarea
-                            ng-model="editingComment.content"
-                            class="form-control"
-                            rows="3"
-                        ></textarea>
-                        <button
-                            ng-click="updateComment()"
-                            class="btn btn-primary mt-2"
-                        >
-                            Save
-                        </button>
-                        <button
-                            ng-click="cancelEditing()"
-                            class="btn btn-secondary mt-2"
-                        >
-                            Cancel
-                        </button>
-                    </div>
-                    <button
-                        ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment._id !== comment._id)"
-                        ng-click="startEditing(comment)"
-                        class="btn btn-success"
-                    >
-                        Edit
-                    </button>
-                    <button
-                        ng-if="isLoggedIn && user.email === comment.user_email"
-                        ng-click="deleteComment(comment._id)"
-                        class="btn btn-danger float-right ml-2"
-                    >
-                        Delete
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div ng-if="comments.length === 0" class="mt-4 text-center">
-            <p>No comments yet. Be the first to comment!</p>
-        </div>
-
-        <div ng-if="isLoggedIn" class="mt-4">
-            <h4>Add a Comment</h4>
-            <div class="form-group"></div>
-            <div class="form-group">
-                <textarea
-                    ng-model="newComment.content"
-                    class="form-control"
-                    rows="3"
-                    placeholder="Add a comment"
-                ></textarea>
-            </div>
-            <button ng-click="addComment()" class="btn btn-success">
-                Submit Comment
-            </button>
-        </div>
-
-        <div ng-if="!isLoggedIn" class="mt-4 text-center text-danger">
-            <p>You must be logged in to comment.</p>
-        </div>
-
-        <div ng-if="error" class="mt-4">
-            <p class="text-center text-danger">{{error }}</p>
         </div>
     </div>
 </div>
