--- a/public/html/product-detail.html
+++ b/public/html/product-detail.html
@@ -68,5 +68,81 @@
                 </button>
             </div>
         </div>
+
+         <div ng-if="comments.length > 0" class="mt-4">
+            <h3>Comments</h3>
+            <div class="list-group">
+                <div ng-repeat="comment in comments" class="list-group-item">
+                    <p>
+                        <strong>{{ comment.user_name }}:</strong> {{
+                        comment.content }}
+                    </p>
+                    <div
+                        ng-if="editingComment && editingComment._id === comment._id"
+                    >
+                        <textarea
+                            ng-model="editingComment.content"
+                            class="form-control"
+                            rows="3"
+                        ></textarea>
+                        <button
+                            ng-click="updateComment()"
+                            class="btn btn-primary mt-2"
+                        >
+                            Save
+                        </button>
+                        <button
+                            ng-click="cancelEditing()"
+                            class="btn btn-secondary mt-2"
+                        >
+                            Cancel
+                        </button>
+                    </div>
+                    <button
+                        ng-if="isLoggedIn && user.email === comment.user_email && (!editingComment || editingComment._id !== comment._id)"
+                        ng-click="startEditing(comment)"
+                        class="btn btn-success"
+                    >
+                        Edit
+                    </button>
+                    <button
+                        ng-if="isLoggedIn && user.email === comment.user_email"
+                        ng-click="deleteComment(comment._id)"
+                        class="btn btn-danger float-right ml-2"
+                    >
+                        Delete
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div ng-if="comments.length === 0" class="mt-4 text-center">
+            <p>No comments yet. Be the first to comment!</p>
+        </div>
+
+        <div ng-if="isLoggedIn" class="mt-4">
+            <h4>Add a Comment</h4>
+            <div class="form-group"></div>
+            <div class="form-group">
+                <textarea
+                    ng-model="newComment.content"
+                    class="form-control"
+                    rows="3"
+                    placeholder="Add a comment"
+                ></textarea>
+            </div>
+            <button ng-click="addComment()" class="btn btn-success">
+                Submit Comment
+            </button>
+        </div>
+
+        <div ng-if="!isLoggedIn" class="mt-4 text-center text-danger">
+            <p>You must be logged in to comment.</p>
+        </div>
+
+        <div ng-if="error" class="mt-4">
+            <p class="text-center text-danger">{{error }}</p>
+        </div>
+    </div>
     </div>
 </div>
